--- a/L+M_EACL_tutorial.ipynb
+++ b/L+M_EACL_tutorial.ipynb
@@ -1091,10 +1091,24 @@
         "  3.1. xyz = cmd.get_coords('sele', 1)\n",
         "  3.2. Take mean of xyz: [30.10645161, 18.18727419, 74.2565]\n",
         "4. Convert to .pdbqt with openbabel: obabel .\\2hxf_dock.pdb -O 2hxf_dock_target.pdbqt -p 7.4 -xr\n",
-        "5. cp 2hxf_dock_target.pdbqt /u/cne2/.local/lib/python3.9/site-packages/dockstring/resources/targets/\n",
-        "   cp 2hxf_dock_conf.txt /u/cne2/.local/lib/python3.9/site-packages/dockstring/resources/targets/\n",
+        "5. cp 2hxf_dock_target.pdbqt /usr/local/lib/python3.10/site-packages/dockstring/resources/targets/\n",
+        "   cp 2hxf_dock_conf.txt /usr/local/lib/python3.10/site-packages/dockstring/resources/targets/\n",
         "   "
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://raw.githubusercontent.com/language-plus-molecules/LPM-24-Tutorial/main/2hxf_dock_conf.txt\n",
+        "!wget https://raw.githubusercontent.com/language-plus-molecules/LPM-24-Tutorial/main/2hxf_dock_target.pdbqt\n",
+        "!cp 2hxf_dock_target.pdbqt /usr/local/lib/python3.10/site-packages/dockstring/resources/targets/\n",
+        "!cp 2hxf_dock_conf.txt /usr/local/lib/python3.10/site-packages/dockstring/resources/targets/\n"
+      ],
+      "metadata": {
+        "id": "ayDbD8fdToEe"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
